--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components{
+    .navBarHover{
+        @apply h-12 px-5 rounded-full bg-transparent flex items-center gap-2 hover:bg-hoverBg duration-300 cursor-pointer;
+    }
+}
+
