--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,5 +6,8 @@
     .navBarHover{
         @apply h-12 px-5 rounded-full bg-transparent flex items-center gap-2 hover:bg-hoverBg duration-300 cursor-pointer;
     }
+    .bottomNavLi{
+        @apply hover:underline underline-offset-2 cursor-pointer decoration-[1px] duration-200;
+    }
 }
 
